--- a/src/ProjektMeister/ProjektMeister.csproj
+++ b/src/ProjektMeister/ProjektMeister.csproj
@@ -39,10 +39,10 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActivityCalculator.cs" />
-    <Compile Include="ActivitySettings.cs" />
+    <Compile Include="ProjectTimingCalculator.cs" />
+    <Compile Include="ProjectTimingSettings.cs" />
     <Compile Include="Helper\TopologicalSort.cs" />
-    <Compile Include="Models\Calculatable.cs" />
+    <Compile Include="Helper\Calculatable.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\ActivityDependency.cs" />
