--- a/src/ProjektMeister/ProjektMeister.csproj
+++ b/src/ProjektMeister/ProjektMeister.csproj
@@ -40,10 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calculation\ActivityInSimulation.cs" />
+    <Compile Include="Calculation\SimulationResult.cs" />
     <Compile Include="Calculation\SimulationSettings.cs" />
     <Compile Include="Calculation\ProjectSimulation.cs" />
     <Compile Include="Helper\TopologicalSort.cs" />
     <Compile Include="Helper\Calculatable.cs" />
+    <Compile Include="Logic\IWorktimeDefinition.cs" />
+    <Compile Include="Logic\PredicateWorkTimeDefinition.cs" />
+    <Compile Include="Logic\WorkTimeDefinitions.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\ActivityDependency.cs" />
